--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">WeatherTracking</string>
     <string name="API_KEY">994a6621fe89429ab3034108241412</string>
+    <string name="search">Search weather</string>
 </resources>
