--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">WeatherTracking</string>
     <string name="API_KEY">994a6621fe89429ab3034108241412</string>
     <string name="search">Search weather</string>
+    <string name="no_city_selected">No City Selected</string>
+    <string name="please_search">Please Search For A City</string>
 </resources>
